# openmp

./: CMakeLists.txt  README.md  gmon.out  main  main.cpp  profile  start.sh
results/coefficient_tests/: dynamic.csv  dynamic1.csv  dynamic1024.csv  dynamic128.csv  dynamic8.csv  static.csv  static1.csv  static1024.csv  static128.csv  static8.csv
results/one_thread_tests/: with_openmp.csv  without_openmp.csv
results/threads_tests/: dynamic.csv  dynamic1.csv  dynamic1024.csv  dynamic128.csv  dynamic8.csv  static.csv  static1.csv  static1024.csv  static128.csv  static8.csv
testers/: test_coefficent.sh  test_one_thread.sh  test_threads.sh
